--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,4 @@
 spring:
-  config:
-    import: application-oauth.yml
   datasource:
     url: jdbc:h2:tcp://localhost/~/testdb
     username: sa
@@ -15,6 +13,17 @@ spring:
         format_sql: true
         default_batch_fetch_size: 1000
         auto_quote_keyword: true
+social:
+  oauth:
+    kakao:
+      client:
+        id:
+        secret:
+      redirect:
+        url: http://localhost:8080/login/oauth2/code/kakao
+        user-info-uri: https://kapi.kakao.com/v2/user/me
 
+jwt:
+  secret:
 logging.level:
   org.hibernate.SQL: debug
