--- a/appspec.yml
+++ b/appspec.yml
@@ -16,3 +16,13 @@ hooks:
     - location: scripts/deploy.sh
       timeout: 60
       runas: ubuntu
+    - location: scripts/run_new_was.sh
+      timeout: 180
+      runas: ubuntu
+    - location: scripts/health_check.sh
+      timeout: 180
+      runas: ubuntu
+    - location: scripts/switch.sh
+      timeout: 180
+      runas: ubuntu
+
