--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
     implementation 'com.google.code.gson:gson:2.10.1'
 
+    // S3
+    implementation 'software.amazon.awssdk:s3:2.17.285'
+
     // swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
 
