--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -24,6 +24,8 @@ jobs:
         touch src/main/resources/application-dev.yml
         echo "${{ secrets.APPLICATION_DEV }}" >> src/main/resources/application-dev.yml
         cat src/main/resources/application-dev.yml
+        touch src/main/resources/application-test.yml
+        echo "${{ secrets.APPLICATION_TEST }}" >> src/main/resources/application-test.yml
       
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
