--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,12 @@ dependencies {
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+    //cache
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+
+    // caffiene cache
+    implementation "com.github.ben-manes.caffeine:caffeine:3.1.8"
 }
 
 test {
