--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,9 @@ dependencies {
 
     // caffiene cache
     implementation "com.github.ben-manes.caffeine:caffeine:3.1.8"
+
+    // popbill
+    implementation 'kr.co.linkhub:popbill-spring-boot-starter:1.9.2'
 }
 
 test {
